# hacomposablealarmclock

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  copilot-instructions.md
branding/: README.md
brands/custom_integrations/hacomposablealarmclock/: README.md
custom_components/hacomposablealarmclock/: __init__.py  button.py  config_flow.py  const.py  diagnostics.py  entity.py  icons.json  manager.py  manifest.json  quality_scale.yaml  repairs.py  sensor.py  services.yaml  strings.json  switch.py  time.py
custom_components/hacomposablealarmclock/translations/: en.json
docs/: ARCHITECTURE.md  LOVELACE_DASHBOARD.yaml  QUALITY_SCALE.md  TESTING.md
docs/lovelace_strategy/: README.md  hacomposablealarmclock-clockface-strategy.js  hacomposablealarmclock-dashboard-strategy.js
tests/: __init__.py  conftest.py  test_config_flow.py  test_config_flow_unit.py  test_diagnostics.py  test_init.py  test_internal_helpers.py  test_manager_unit.py  test_platform_entities_unit.py  test_repairs.py  test_sensor.py
