[project]
name = "hacomposablealarmclock"
version = "0.1.0"
description = "Home Assistant custom integration for a composable alarm clock"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "cmmtchll" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-socket --allow-unix-socket --cov=custom_components.hacomposablealarmclock --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
plugins = []
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "call-overload", "index", "type-arg"]

[[tool.mypy.overrides]]
module = ["pytest_homeassistant_custom_component.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["custom_components.hacomposablealarmclock.*"]
disallow_untyped_defs = false
disable_error_code = [
	"assignment",
	"attr-defined",
	"call-arg",
	"dict-item",
	"misc",
	"no-any-return",
	"override",
	"return-value",
	"untyped-decorator",
]
